--- a/tennis_classifier.ipynb
+++ b/tennis_classifier.ipynb
@@ -10,7 +10,6 @@
     "import numpy as np\n",
     "\n",
     "import psycopg2 as pg\n",
-    "import pandas as pd\n",
     "import pandas.io.sql as pd_sql\n",
     "from sqlalchemy import create_engine\n",
     "import re\n",
@@ -869,20 +868,7 @@
     "    \"\"\"Plot features of df with different classifications as different colors.\"\"\"\n",
     "    sample = df.sample(sample_size, random_state=87)\n",
     "    sns.pairplot(sample,hue=y_col, plot_kws=dict(alpha=.3, edgecolor='none'))\n",
-    "\n",
-    "    \n",
-    "def make_confusion_matrix(model,x_data,y_data,threshold=0.5):\n",
-    "    \"\"\"Predict class 1 if probability of being in class 1 is greater than threshold\n",
-    "    (model.predict(X_test) does this automatically with a threshold of 0.5)\"\"\"\n",
-    "    y_predict = (model.predict_proba(x_data)[:, 1] >= threshold)\n",
-    "    model_confusion = confusion_matrix(y_data, y_predict)\n",
-    "    plt.figure(dpi=50,figsize=[6.4,4.8])\n",
-    "    sns.set(font_scale=1.2)\n",
-    "    sns.heatmap(model_confusion, cmap=plt.cm.YlGnBu, annot=True, square=False, fmt='d',\n",
-    "           xticklabels=['0', '1'],\n",
-    "           yticklabels=['0', '1']);\n",
-    "    plt.xlabel('prediction')\n",
-    "    plt.ylabel('actual')"
+    "\n"
    ]
   },
   {
@@ -1179,7 +1165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since only 16 of the 128 players will make the round of 16 (R16), it doesn't make sense to be setting a threshold cutoff to above which the estimator predicts True and below, False. Instead, I'm going to use the estimator to calculate the probability of each player qualifying for R16 and take the top 16 as the predicted qualifiers. In theory, this means the number of false positivies would equal the number of false negatives. However, there could be multiple players with the same odds, especially for a tree-based estimator, so some may predict more than 16 players qualifying for R16 and thus precision, recall, and f1 wouldn't be equal. Rather than collate precision, recall, and f1, I'm just calculating precision and recall and then picking the minimum between the two. That way, if I am predicting more than 16 players making the R16, I am not artificially inflating the scoring metric."
+    "Since only 16 of the 128 players will make the round of 16 (R16), it doesn't make sense to be setting a threshold cutoff above which the estimator predicts True and below, False. Instead, I'm going to use the estimator to calculate the probability of each player qualifying for R16 and take the top 16 as the predicted qualifiers. In theory, this means the number of false positivies would equal the number of false negatives. However, there could be multiple players with the same odds, especially for a tree-based estimator, so some may predict more than 16 players qualifying for R16 and thus precision, recall, and f1 wouldn't be equal. Rather than collate precision, recall, and f1, I'm just calculating precision and recall and then picking the minimum between the two. That way, if I am predicting more than 16 players making the R16, I am not artificially inflating the scoring metric."
    ]
   },
   {
